--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "commonjs",
     "scripts": {
         "dev": "npm run development",
         "development": "mix",
@@ -10,19 +11,13 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.21",
-        "bootstrap": "^5.1.3",
-        "browser-sync-webpack-plugin": "^2.4.0",
-        "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.4.6",
-        "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "tailwindcss": "^3.1.0"
+        "@tailwindcss/forms": "^0.5.7",
+        "autoprefixer": "^10.4.17",
+        "laravel-mix": "^6.0.49",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1"
+    },
+    "dependencies": {
+        "swiper": "^11.0.6"
     }
 }
